--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Youtube Skip Adds",
-    "description": "When an add appears on the screen this extension skip it!",
+    "name": "Youtube Adds Skipper",
+    "description": "When an add appears on the screen this extension skips it automatically!",
     "version": "1.0",
     "manifest_version": 3,
     "icons": { 
@@ -15,9 +15,9 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["*://*.youtube.com/*"],
             "js": ["content-script.js"],
-            "match_about_blank": true,
+            "match_about_blank": false,
             "all_frames": true,
             "run_at": "document_start"
         }
