--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Youtube Adds Skipper",
-    "description": "When an add appears on the screen this extension skips it automatically!",
-    "version": "1.0",
+    "name": "Youtube Ads Skipper",
+    "description": "When an video ad appears on the screen this extension skips it automatically!",
+    "version": "1.1",
     "manifest_version": 3,
     "icons": { 
       "16": "icons/skip16.png",
